--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,21 +1,12 @@
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
-  <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" href="http://k-comment.ru">
-    <%= image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'w-100 pe-5' %>
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-0 border-bottom">
+  <a class="col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" href="http://myappda.ru">
+    <%# image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'w-100 pe-5' %>
+    <%= image_tag "new_logo_myappda.svg", data: {src: "new_logo_myappda.svg", title: 'MyAppDa'}, class: 'logo logo_white' %>
   </a>
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li class="p-2 nav-item">
       <a class="nav-link text-dark" href="/#about-app">О приложении</a>
     </li>
-    <%# <li>
-      <a class="p-2 text-dark" href="/#price">Цена</a>
-    </li>
-    <li>
-      <a class="p-2 text-dark" href="/#work">Услуги</a>
-    </li>
-    <li>
-      <a class="p-2 text-dark" href="/#o-nas">О нас</a>
-    </li>
-    <li> %>
     <li class="p-2 nav-item dropdown">
     <a class="nav-link text-dark dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Сервисы</a>
     <ul class="dropdown-menu">
