--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,14 +9,13 @@
     <!-- About Section Content -->
     <div class="row">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">"K-comment" это дополнительное приложение для CMS InSales. Оно позволяют расширить стандартный функционал магазина. В составе приложения есть разные сервисы. Например: сервис 
-        "Избранные товары", сервис "Собщить о поступлении", сервис "Сообщения"</p>
+        <p class="lead">"MyAppDA" - это простое маркетинговое дополнение для CMS InSales. Оно позволяют добавлять сценарии работы с заказами по разным триггерам. В составе приложения есть разные сервисы. Например: "Избранные товары", "Собщить о поступлении", "Предзаказ", "Брошенная корзина", работа по API с заказом. </p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Использование приложения позволяет Вашим клиентам получить более качественные сервис от интернет-магазина.</p>
+        <p class="lead">Использование приложения позволяет Вашим клиентам получить более качественные сервис от интернет-магазина. А вам иметь расширенную информацию для работы с клиентом. Так же мы уже можем автоматизировать работу с заказом. Например, у нас есть "Отмена заказа" при неоплате в течении определенного времени.</p>
       </div>
       <div class="col-lg-4 mr-auto">
-        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация для ваших клиентов для совершения покупок.</p>
+        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация для ваших клиентов для совершения покупок. Так же мы готовы реализовать ваш сценарий работы с клиентом</p>
       </div>
     </div>
     <%# <div class="text-center"><a class="btn btn-primary btn-lg" href="http://demo-themes.myinsales.ru/" target="_blank">Демо магазин</a></div> %>
