--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 
   <footer class="footer mt-auto py-3 bg-light border-top">
     <% if user_signed_in? %>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <ul class="list-unstyled text-small list-group list-group-horizontal justify-content-end">
           <li class="list-group-item border-0 bg-transparent">
@@ -13,7 +13,7 @@
           <li class="list-group-item border-0 bg-transparent">
             <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
           </li>
-          <li class="list-group-item text-muted border-0 bg-transparent">K-comment<small> &copy; 2019-<%= Time.now.strftime("%Y" )%></small></li>
+          <li class="list-group-item text-muted border-0 bg-transparent">MyAppDA<small> &copy; 2019-<%= Time.now.strftime("%Y" )%></small></li>
         </ul>
         </div>
         </div>
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-3 text-center text-md-start">
-          <h5>K-comment</h5>
+          <h5>MyAppDA</h5>
           <h6>автоматизация CMS InSales</h6>
           <ul class="list-unstyled text-small">
             <li>
@@ -49,7 +49,7 @@
               <a class="text-muted" href="/restock">Собщить о поступлении</a>
             </li>
             <li>
-              <a class="text-muted" href="/message">Сообщения</a>
+              <a class="text-muted" href="/message">Триггеры</a>
             </li>
             <li>
               <a class="text-muted" href="/documents">Настройка</a>
