--- a/app/assets/stylesheets/logo.scss
+++ b/app/assets/stylesheets/logo.scss
@@ -1,18 +1,18 @@
 
 .logo_white {
-  width: 60%;
-  padding: 5px;
+  max-height: 70px;
 }
 @media (max-width: 1090px) {
   .navbar-brand {
-    width: 100%;
+    //width: 100%;
   }
 }
 @media (max-width: 580px) {
   .navbar-brand {
-    width: 70%;
+    //width: 70%;
   }
   .logo_white {
-    width: 250px;
+    //width: 250px;
+    max-height: 70px;
   }
 }
