--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark py-0 ">
   <a class="navbar-brand" href="<%= root_path %>">
     <%# image_tag "logo_white.png", data: {src: "logo_white.png", title: 'K-comment избранные товары'}, class: 'logo logo_white' %>
-    <%= image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'logo logo_white' %>
+    <%= image_tag "new_logo_myappda_white.svg", data: {src: "new_logo_myappda_white.svg", title: 'MyAppDa'}, class: 'logo logo_white' %>
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
+<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav me-auto">
       <li class="nav-item <%= 'active' if current_page?(dashboard_path) %>">
