add name to email from

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
 <meta name="yandex-verification" content="c284690800bdd189" />
 <title>K-comment - это дополнительное приложение для CMS InSales</title>
-<meta name="description" content="K-comment - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Сообщения"/>
+<meta name="description" content="MyAppDA - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Триггеры, маркетинг, рассылки"/>
 <%= favicon_link_tag asset_path("new_icon.png") %>
 
 <%# stylesheet_link_tag "application", media: "all" %>
