remove zammad add icon

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -31,7 +31,7 @@
               <a class="text-muted" href="+74997042035">88123392235</a>
             </li>
             <li>
-              <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
+              <a class="text-muted" href="mailto:k-comment.ru"></a>
             </li>
           </ul>
           <small class="d-block mb-3 text-muted">&copy; 2019-<%= Time.now.strftime("%Y" )%></small>
