--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -3,9 +3,9 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
 <meta name="yandex-verification" content="c284690800bdd189" />
-<title>K-comment - это дополнительное приложение для CMS InSales</title>
+<title>MyAppDA - email рассылки, маркетинг для CMS InSales</title>
 <meta name="description" content="MyAppDA - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Триггеры, маркетинг, рассылки"/>
-<%= favicon_link_tag asset_path("new_icon.png") %>
+<%= favicon_link_tag asset_path("myappda_icon.png") %>
 
 <%# stylesheet_link_tag "application", media: "all" %>
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
