--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -15,7 +15,7 @@ body {    overflow-x: hidden;}
     bottom: 0.5rem;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    left: 0.5rem;
+    right: 0.5rem;
     text-decoration: none;
     display: block;
     cursor: pointer;
