add image link to product

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -30,7 +30,7 @@ body {    overflow-x: hidden;}
   z-index: 999;
   position: fixed;
   bottom: 0.5rem;
-  left: 0.5rem;
+  right: 0.5rem;
   max-width: 45px;
   text-align: center;
 }
