--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,7 @@
           <!-- <th><%# check_box_tag 'selectAll', value: 'selectAll'%></th> -->
           <th>#</th>
           <th>Id товара</th>
-          <%# <th>Img</th> %>
+          <th>Img</th>
           <th>Название</th>
           <th>Варианты</th>
           <th>Цены</th>
@@ -34,18 +34,7 @@
         </tr>
       </thead>
       <tbody id="items_table">
-        <% @products.each do |product| %>
-          <tr>
-            <!-- <td><%# check_box_tag "product_ids[]", product.id %></td> -->
-            <td><%= product.id %></td>
-            <td><%= product.insid %></td>
-            <!--<td><%# render 'one_image', :image_link => Product.get_image(product.insid), image_style: "" %></td>-->
-            <td><%= product.title %></td>
-            <td><%= link_to '<span class="oi oi-eye"></span>'.html_safe, product if product.variants.present? %></td>
-            <td><%= product.price %></td>
-            <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
+        <%= render @products %>
       </tbody>
     </table>
   </div>
