--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -18,6 +18,7 @@
       <table class="table table-primary" id="line-table">
         <thead>
           <tr>
+            <th></th>
             <th>Название товара</th>
             <th>Вариант</th>
             <th>Кол-во</th>
@@ -28,6 +29,7 @@
         <tbody>
           <% @case.lines.each do |line|%>
             <tr class="line_<%= line.id%>">
+            <td><img src="<%= line.product.title %>" style="width:100px;"/></td>
               <td><%= line.product.title %></td>
               <td><%= link_to "#{line.variant.insid.to_s }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+line.variant.product.insid.to_s+"?variant_id="+line.variant.insid.to_s, target: "_blank" %>
                   <br>Артикул: <%= line.variant.sku.to_s  %></td>
