--- a/app/views/templates/_liquid_help.html.erb
+++ b/app/views/templates/_liquid_help.html.erb
@@ -41,6 +41,10 @@
     <li class="list-group-item">{{order.financial_status}}</li>
     <li class="list-group-item">{{order.paid?}}</li>
 </ul>
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{order.manager_comment}}</li>
+    <li class="list-group-item"></li>
+</ul>
 </div>
 <div class="col-6">
 <span class="">Клиент магазина</span>
