--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <% end %>
     <main class="flex-shrink-0">
       <div id="main-content" class="container-fluid">
-        <div id="our_flash">
+        <div id="our_flash" class="position-absolute start-50 translate-middle-x w-25" style="top: 20px;">
           <%= render "shared/flash"%>
         </div>
 
