--- a/app/views/templates/_liquid_help.html.erb
+++ b/app/views/templates/_liquid_help.html.erb
@@ -43,7 +43,7 @@
 </ul>
 <ul class="list-group list-group-horizontal">
     <li class="list-group-item">{{order.manager_comment}}</li>
-    <li class="list-group-item"></li>
+    <li class="list-group-item">{{order.key}}</li>
 </ul>
 </div>
 <div class="col-6">
