--- a/app/views/useraccounts/edit.html.erb
+++ b/app/views/useraccounts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', useraccount: @useraccount %>
 
-<%= link_to 'Show', @useraccount %> |
-<%= link_to 'Back', useraccounts_path %>
+<%# link_to 'Show', @useraccount %>
+<%= link_to 'Back', useraccounts_path, class: "btn btn-link" %>
