--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -17,10 +17,30 @@
       <%= f.error_notification %>
       <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
       
-      <%= f.input :title, label: "Название шаблона", wrapper_html: {class: "col-6"}  %>
-      <%= f.input :receiver, label: "Получатель", collection: [['Клиент','client'],['Менеджер','manager']], prompt: false, input_html: { class: "form-select" }, wrapper_html: {class: "col-6"} %>
-      <%= f.input :subject, label: "Тема письма", wrapper_html: {class: "mt-4"} %>
-      <%= f.input :content, label: "Содержание письма", input_html: {id: "template-content", rows: "15"} , wrapper_html: {class: "mt-4"}%>
+      <%= f.input :title, label: "Название шаблона", input_html: {value: @validate_title.present? ? @validate_title : f.object.title}, wrapper_html: {class: "col-12"}  %>
+      <div class="col-12 mt-4">
+        <% check_receiver = f.object.receiver %>
+        <% input_class = check_receiver == "client" ? "col-12 mt-4 form-control d-none" : "col-12 mt-4 form-control" %>
+        <label for="" class="me-3">Получатель:</label>
+        <input type="radio" class="btn-check" 
+                            name="receiver-options" 
+                            id="manager-outlined" autocomplete="off"
+                            <% if check_receiver != "client"%>checked<% end %> 
+                            value="manager">
+        <label class="btn btn-outline-success" for="manager-outlined">Менеджер</label>
+
+        <input type="radio" class="btn-check" 
+                            name="receiver-options" 
+                            id="client-outlined" autocomplete="off" 
+                            <% if check_receiver == "client"%>checked<% end %> 
+                            value="client">
+        <label class="btn btn-outline-success" for="client-outlined">Клиент</label>
+      </div>
+      <%=f.input :receiver, label: false, input_html: { class: input_class, value: @validate_receiver.present? ? @validate_receiver : check_receiver, placeholder: "адреса через запятую", autocomplete: "off"}%>
+      <%# f.input :receiver, label: "Получатель", collection: [['Клиент','client'],['Менеджер','manager']], prompt: false, input_html: { class: "form-select" }, wrapper_html: {class: "col-6"} %>
+      
+      <%= f.input :subject, label: "Тема письма", input_html: {value: @validate_subject.present? ? @validate_subject : f.object.subject}, wrapper_html: {class: "mt-4"} %>
+      <%= f.input :content, label: "Содержание письма", input_html: {id: "template-content", rows: "15", value: @validate_content.present? ? @validate_content : f.object.content} , wrapper_html: {class: "mt-4"}%>
       <div class="col-2 btn-group mt-5 mb-5">
         <%= f.button :submit, 'Сохранить', class: 'btn btn-success' %>
         <%= link_to 'Назад', templates_path, class: 'btn btn-outline-primary' %>
