--- a/app/views/useraccounts/_form.html.erb
+++ b/app/views/useraccounts/_form.html.erb
@@ -3,14 +3,22 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
+  <div class="col-12">
+    <%= tag.div class: "col-4 p-0 m-0" do %>
     <%= f.input :name %>
+    <% end %>
+    <%= tag.div class: "col-3 p-0 m-0" do %>
     <%= f.input :email %>
-    <%= f.input :shop %>
-    <%= f.input :insuserid %>
+     <% end %>
+    <%= tag.div class: "col-2 p-0 m-0 d-none" do %>
+    <%= f.input :shop, class: "disabled", readonly: true %>
+     <% end %>
+    <%= tag.div class: "col-2 p-0 m-0 d-none" do %>
+    <%= f.input :insuserid, class: "disabled", readonly: true %>
+     <% end %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-actions my-4">
+    <%= f.button :submit, 'Создать', class: "btn btn-primary"  %>
   </div>
 <% end %>
