--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,11 +41,7 @@
       </tr>
     </thead>
     <tbody class="align-middle">
-      <% @users.each do |user| %>
-        <tr id="id_<%= user.id %>">
-          <%= render user %>
-        </tr>
-      <% end %>
+          <%= render @users %>
     </tbody>
   </table>
 </div>
