change set status

--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -37,6 +37,7 @@
       <th>Тип заявки</th>
       <th>Номер</th>
       <th>Клиент</th>
+      <th>Сумма</th>
       <th></th>
     </tr>
   </thead>
@@ -47,13 +48,14 @@
           <td><%= check_box_tag "case_ids[]", mycase.id %></td>
           <td><%= mycase.id %></td>
           <td>Статус: <%= mycase.status_title %></br>Дата: <%= mycase.created_at.strftime("%d/%m/%Y %H:%M")%></td>
-          <td><%= mycase.casetype_value %></td>
+          <td><%= mycase.casetype_value %><%= "<br> (#{mycase.insales_order_id} )".html_safe if mycase.casetype == 'order' %></td>
           <td><%= mycase.number %></td>
           <td><%= mycase.client_data %></td>
+          <td><%= mycase.items_sum %></td>
           <td>
             <span class="d-flex">
-            <%= link_to '<span class="oi oi-pencil"></span>'.html_safe, edit_case_path(mycase), class: "px-3" %>
-            <%= link_to '<span class="oi oi-trash"></span>'.html_safe, mycase, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to '<span class="oi oi-pencil"></span>'.html_safe, edit_case_path(mycase), class: "px-3" %>
+              <%= link_to '<span class="oi oi-trash"></span>'.html_safe, mycase, method: :delete, data: { confirm: 'Are you sure?' } %>
             </span>
           </td>
       </tr>
