--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -18,9 +18,9 @@
         <td>
             <% insint = user.insints.first %>
             <div class="btn-group-vertical" role="group" aria-label="button setup">
-                <%= link_to '<i class="bi bi-arrow-left-right"></i> API'.html_safe, check_insints_path(insint), remote: true, method: :get, class: "btn btn-outline-info btn-sm" if insint %>
-                <%= link_to '<i class="bi bi-envelope"></i> Email'.html_safe, check_email_users_path(user), remote: true, method: :get, class: "btn btn-outline-info btn-sm" %>
-                <%= link_to '<i class="bi bi-arrow-up"></i> Add Order WebHook'.html_safe, add_insales_order_webhook_users_path(user), remote: true, method: :get, class: "btn btn-outline-info btn-sm" if insint %>
+                <%= link_to '<i class="bi bi-arrow-left-right"></i> API'.html_safe, check_insints_path(insint), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" if insint %>
+                <%= link_to '<i class="bi bi-envelope"></i> Email'.html_safe, check_email_users_path(user), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" %>
+                <%= link_to '<i class="bi bi-arrow-up"></i> Add Order WebHook'.html_safe, add_insales_order_webhook_users_path(user), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" if insint %>
             </div>
         </td>
     <td>
@@ -36,7 +36,7 @@
         Действует до - <%= user.favorite_setup_valid_until %> </td>
     <td><%= user.message_setup_status %><br>
         Действует до - <%= user.message_setup_valid_until %><br>
-        <%= link_to "Add 2 week", add_message_setup_ability_users_path(user), :remote => true, :method => :get, class: "btn btn-outline-info btn-sm" %>
+        <%= link_to "Add 2 week", add_message_setup_ability_users_path(user), data: {turbo_method: :get, turbo_stream: true}, class: "btn btn-outline-info btn-sm" %>
     </td>
-    <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' }  if current_admin %></td>
+    <td><%= link_to trash_icon, user, data: { "turbo-method": :delete, 'turbo-confirm': 'Вы уверенны?' }  if current_admin %></td>
 </tr>
