--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row align-items-center g-2">
   <div class="col-4 btn-group mt-5">
     <%= link_to 'Назад', clients_path, class: 'btn btn-success' %>
-    <%= link_to 'Обновить данные клиента из инсалес', update_from_insales_path(@client), method: :put, class: 'btn btn-outline-primary' if @client.clientid %>
+    <%= link_to 'Обновить данные клиента из инсалес', update_from_insales_path(@client), data: {turbo: false}, class: 'btn btn-outline-primary' if @client.clientid %>
   </div>
 </div>
 <div class="row justify-content-center align-items-center g-2 mt-3">
@@ -11,9 +11,7 @@
 <% if @favorite_products.present? %>
   <div class="row align-items-center mt-3 mb-3">
     <strong>Товары Избранное:</strong>
-    <p>
-      <%= link_to 'Отправить письмо с избранным'.html_safe, emailizb_client_path(@client.id), title: "Отправить письмо с избранным", class: "btn btn-light", role:"button", remote: true%>
-    </p>
+    <%= link_to 'Отправить письмо с избранным'.html_safe, emailizb_client_path(@client.id), title: "Отправить письмо с избранным", class: "btn btn-light my-2", data: {turbo_method: :get, turbo_stream: true} %>
     <div class="table-responsive">
     <table class="table table-hover table-condensed table-sm">
       <thead class="thead-light">
