change home page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-12 col-sm-3 text-center text-md-start">
           <h5>MyAppDA</h5>
-          <h6>автоматизация CMS InSales</h6>
+          <h6>это сервис маркетинга для интернет-магазина (email, соц сети, мессенджеры, формы, статистика, аналитика)</h6>
           <ul class="list-unstyled text-small">
             <li>
               <a class="text-muted" href="+74997042035">84997052117</a>
@@ -31,10 +31,9 @@
               <a class="text-muted" href="+74997042035">88123392235</a>
             </li>
             <li>
-              <a class="text-muted" href="mailto:k-comment.ru"></a>
+              <a class="text-muted" href="mailto:info@myappda.ru">info@myappda.ru</a>
             </li>
           </ul>
-          <small class="d-block mb-3 text-muted">&copy; 2019-<%= Time.now.strftime("%Y" )%></small>
         </div>
         <div class="col-3 col-md d-none d-md-block">
           <h5>Меню</h5>
@@ -82,6 +81,7 @@
             <li>Свидетельство о регистрации - 313774610800128</li>
             <li>ИНН - 772745849012</li>
           </ul>
+          <small class="d-block mb-3 text-muted">&copy; 2019-<%= Time.now.strftime("%Y" )%></small>
         </div>
       </div>
     </div>
