--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -3,8 +3,8 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="google-site-verification" content="A2boZBNCfcqtaHUFrJL26DHYNaKN9efyXijRxZmNVCk"/>
 <meta name="yandex-verification" content="c284690800bdd189" />
-<title>MyAppDA - email рассылки, маркетинг для CMS InSales</title>
-<meta name="description" content="MyAppDA - это дополнительное приложение для CMS InSales. Избранные товары, Собщить о поступлении, Триггеры, маркетинг, рассылки"/>
+<title>MyAppDA - сервис маркетинга для интернет-магазина (email, соц сети, мессенджеры, формы, статистика, аналитика)</title>
+<meta name="description" content="MyAppDA - это сервис маркетинга для интернет-магазина (email, соц сети, мессенджеры, формы, статистика, аналитика). Избранные товары, Собщить о поступлении, Триггеры, маркетинг, рассылки"/>
 <%= favicon_link_tag asset_path("myappda_icon.png") %>
 
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
